--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "next": "15.2.3",
     "next-sanity": "9",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
     "sanity": "3",
     "styled-components": "6",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/validator": "^13.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
